[package]
name = "space_kitty"
version = "0.1.0"
edition = "2021"
description = "Crate with game about Kitty in Space"

[dependencies]
bevy = { version = "0.10.1", default-features = false, features = [
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_winit",
    "bevy_asset",
    "bevy_sprite",
    "bevy_ui",
    "png"
]}
kira = "0.8.4"
bevy_egui = "0.20.3"
bevy-inspector-egui = "0.18.3"
bevy_rapier2d = { version = "0.21.0", features = ["simd-stable"] }
bevy_hanabi = "0.6.2"
bevy_tweening = "0.7.0"
rand = "0.8.5"
serde = "1.0.164"
serde_json = "1.0.99"
# interpolation = "0.2.0"

[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

[features]
profile = []

[package.metadata.bundle]
name = "Space Kitty"
identifier = "com.ghashy.spacekitty"
icon = ["assets/icons/icon.png"]
version = "0.0.1"
resources = ["assets/**/*.*"]
copyright = "Copyright (c) Ghashy 2023. All rights reserved."
category = "Games"
short_description = "Game about Kitty in Space"
osx_minimum_system_version = "10.15"
