[package]
name = "space_kitty"
version = "0.1.0"
edition = "2021"
description = "Crate with game about Kitty in Space"

[dependencies]
bevy = { version = "0.10.1", default-features = false, features = [
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_winit",
    "bevy_asset",
    "bevy_sprite",
    "bevy_ui",
    "png"
]}
kira = "0.8.4"
bevy_rapier2d = { version = "0.21.0", features = ["simd-stable"] }
bevy_tweening = "0.7.0"
rand = "0.8.5"
serde = "1.0.164"
serde_json = "1.0.99"
bevy_hanabi = { version = "0.6.2", optional = true }
bevy_egui = { version = "0.20.3", optional = true }
bevy-inspector-egui = { version = "0.18.3", optional = true }

tracing-subscriber = { version = "0.3.17", optional = true }
tracing-appender = { version = "0.2.2", optional = true }

[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

[features]
default = ["bevy_egui", "bevy-inspector-egui", "bevy_hanabi"]
file_logger = ["tracing-appender", "tracing-subscriber"]

